--- a/001.HTML/012.Blue_PJ/css/crtist.css
+++ b/001.HTML/012.Blue_PJ/css/crtist.css
@@ -14,7 +14,6 @@
     width: 680px;
     height: 450px;
     position: relative;
-    text-align: center;
     margin: auto;
 }
 .info .title .titleBox{
@@ -33,7 +32,8 @@
 }
 
 .info .news {
-    width: calc(85vw - 80%);
+    width: 620px;
+    height: 100%;
 }
 
 .swiper {
@@ -54,7 +54,6 @@
     display: block;
     width: 100%;
     height: 100%;
-    object-fit: cover;
 }
 
 .swiper-button-prev{
@@ -84,4 +83,13 @@
 .scrip{
     margin-top: 30px;
     text-align: justify;
+}
+
+@media only screen and (max-width: 1024px) {
+    .article{
+        max-width: 900px;
+    }
+    .info .news {
+        width: 340px;
+    }
 }
