--- a/001.HTML/012.Blue_PJ/css/intro.css
+++ b/001.HTML/012.Blue_PJ/css/intro.css
@@ -14,8 +14,6 @@ body {
     font-family: 'Permanent Marker', cursive;
     letter-spacing: 2px;
     white-space: nowrap;
-    background-color: #999;
-    /* cursor: url(../images/hand.png)100 100, auto; */
 }
 
 a {
@@ -29,20 +27,17 @@ a {
     overflow: hidden;
     width: 100vw;
     height: 100vh;
-    /* border: 1px solid red; */
 }
 
 .wrap .bg {
     position: relative;
-    background: url(../images/hifive1.webp) no-repeat 0 0/cover;
+    background: url(../images/hifive1.webp) no-repeat 50% 50% / contain;
     height: 100vh;
     filter: grayscale(1);
     z-index: 1;
-    /* border: 1px solid blue; */
 }
 
 .wrap .tit {
-    /* border: 1px solid green; */
     position: absolute;
     width: 23vw;
     height: 40vh;
@@ -63,24 +58,36 @@ a {
     font-size: 1.9vw;
 }
 
-.wrap .wall {
-    filter: grayscale(1);
-    background: url(../images/wall2.png) no-repeat 0 0/cover;
-    position: absolute;
-    bottom: 0;
-    left: 0;
-    height: 100%;
-    width: 100%;
-    font-size: 100px;
-    left: 0;
-    bottom: 0;
-}
-
-.wrap .tit:hover+.bg+.wall {
-    filter: grayscale(0);
-}
-
 /* 반응형 */
 @media (max-width: 768px) {
-    
+    .wrap .tit{
+    width: 18vw;
+    height: 26vh;
+    top: 41%;
+    line-height: 26vh;
+    padding-top: 0;
+    }
+    .wrap .tit a{
+        font-size: 1.5vh;
+    }
+}
+@media (max-width: 425px) {
+    .wrap .tit{
+        height: 15vh;
+        top: 45%;
+        line-height: 15vh;
+    }
+    .wrap .tit a {
+        font-size: .7vh;
+    }
+}
+@media (max-width: 375px) {
+    .wrap .tit{
+        height: 10vh;
+        top: 47%;
+        line-height: 10vh;
+    }
+    .wrap .tit a {
+        font-size: .6vh;
+    }
 }
