--- a/001.HTML/012.Blue_PJ/css/intro.css
+++ b/001.HTML/012.Blue_PJ/css/intro.css
@@ -83,7 +83,7 @@ a {
         line-height: 15vh;
     }
     .wrap .tit a {
-        letter-spacing: 1px;
+        letter-spacing: 0;
         font-size: .8vh;
     }
 }
