--- a/001.HTML/012.Blue_PJ/css/intro.css
+++ b/001.HTML/012.Blue_PJ/css/intro.css
@@ -80,11 +80,12 @@ a {
     .wrap .tit{
         height: 15vh;
         top: 45%;
+        left: 13%;
         line-height: 15vh;
     }
     .wrap .tit a {
         letter-spacing: 0;
-        font-size: .8vh;
+        font-size: 1vh;
     }
 }
 @media (max-width: 375px) {
@@ -94,6 +95,6 @@ a {
         line-height: 10vh;
     }
     .wrap .tit a {
-        font-size: .7vh;
+        font-size: .9vh;
     }
 }
