--- a/001.HTML/013.ghibli_PJ/css/common.css
+++ b/001.HTML/013.ghibli_PJ/css/common.css
@@ -74,8 +74,8 @@ abbr {
     position: absolute;
     top: 50%;
     left: calc(50% - 22.5px);
-    width: 35px;
-    height: 35px;
+    width: 30px;
+    height: 30px;
     z-index: 10;
     transform: translateY(-50%);
 }
@@ -180,13 +180,22 @@ abbr {
     right: -100%;
     width: 100%;
     height: 100%;
-    background-color: #8fb5c4;
-    transition: right .4s ease-in-out;
+    transition: right .4s ease-in-out, background-image .3s ease-in-out;
     z-index: 9999;
+    background: url(../img/main/mbg4.png) no-repeat 50% / cover;
 }
 
 .gnb1.on {
     right: 0;
+}
+
+.gnb1.on::before {
+    content: '';
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    background: #00000023;
+    z-index: 9;
 }
 
 .cbtn {
@@ -202,7 +211,7 @@ abbr {
     background-color: #ffffff00;
     padding: 0;
     cursor: pointer;
-    z-index: 1;
+    z-index: 99;
 }
 
 .gnb1 a {
@@ -215,12 +224,13 @@ abbr {
 }
 
 .gnb1 ul {
-    position: relative;
+    position: absolute;
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
     margin: 0 auto;
     overflow: hidden;
+    z-index: 99;
 }
 
 .gnb1 ul>li {
@@ -241,12 +251,12 @@ abbr {
     width: 320px;
     font-weight: bolder;
     display: block;
-    transition: .5s;
+    transition: all .5s ease;
 }
 
 .gnb1>ul>li:hover>a {
-    color: #12adda;
-    background-color: #213490d6;
+    color: #ffbb52;
+    background-color: #ffff91;
 }
 
 .ghilogo {
@@ -345,17 +355,17 @@ abbr {
     width: 100%;
     height: 100%;
     background: #000;
-  }
+}
 
-  .swiper-slide {
+.swiper-slide {
     font-size: 18px;
     color: #fff;
     -webkit-box-sizing: border-box;
     box-sizing: border-box;
     padding: 40px 60px;
-  }
+}
 
-  .parallax-bg {
+.parallax-bg {
     position: absolute;
     left: 0;
     top: 0;
@@ -366,33 +376,35 @@ abbr {
     background-position: center;
 }
 
-.parallax-bg.m1{
-      background: url(../img/main/mbg1.jpeg) no-repeat 50% / cover;
-  }
+.parallax-bg.m1 {
+    background: url(../img/main/mbg1.jpeg) no-repeat 50% / cover;
+}
 
-  .parallax-bg.m2{
+.parallax-bg.m2 {
     background: url(../img/main/mbg2.jpeg) no-repeat 50% / cover;
-  }
-  .parallax-bg.m3{
-    background: url(../img/main/mbg3.jpeg) no-repeat 50% / cover;
-  }
+}
 
-  .txtWrap {
+.parallax-bg.m3 {
+    background: url(../img/main/mbg3.jpeg) no-repeat 50% / cover;
+}
+
+.txtWrap {
     position: absolute;
     bottom: 5%;
     left: 5%;
 }
- .swiper-slide .title {
+
+.swiper-slide .title {
     font-size: 41px;
     font-weight: 300;
-  }
+}
 
-  .swiper-slide .subtitle {
+.swiper-slide .subtitle {
     font-size: 21px;
-  }
+}
 
-  .swiper-slide .text {
+.swiper-slide .text {
     font-size: 14px;
     max-width: 400px;
     line-height: 1.3;
-  }
+}
