--- a/001.HTML/013.ghibli_PJ/css/common.css
+++ b/001.HTML/013.ghibli_PJ/css/common.css
@@ -377,15 +377,47 @@ abbr {
 }
 
 .parallax-bg.m1 {
-    background: url(../img/main/mbg1.jpeg) no-repeat 50% / cover;
+    background: url(../img/main/chihiro.jpeg) no-repeat 50% / cover;
 }
 
 .parallax-bg.m2 {
-    background: url(../img/main/mbg2.jpeg) no-repeat 50% / cover;
+    background: url(../img/main/howl011.jpg) no-repeat 50% / cover;
 }
 
 .parallax-bg.m3 {
-    background: url(../img/main/mbg3.jpeg) no-repeat 50% / cover;
+    background: url(../img/main/mononoke008.jpg) no-repeat 50% / cover;
+}
+
+.parallax-bg.m4 {
+    background: url(../img/main/umi023.jpg) no-repeat 50% / cover;
+}
+
+.parallax-bg.m5 {
+    background: url(../img/main/laputa036.jpg) no-repeat 50% / cover;
+}
+
+.parallax-bg.m6 {
+    background: url(../img/main/majo014.jpg) no-repeat 50% / cover;
+}
+
+.parallax-bg.m7 {
+    background: url(../img/main/porco041.jpg) no-repeat 50% / cover;
+}
+
+.parallax-bg.m8 {
+    background: url(../img/main/totoro029.jpg) no-repeat 50% / cover;
+}
+
+.parallax-bg.m9 {
+    background: url(../img/main/kokurikozaka017.jpg) no-repeat 50% / cover;
+}
+
+.parallax-bg.m10 {
+    background: url(../img/main/kazetachinu024.jpg) no-repeat 50% / cover;
+}
+
+.parallax-bg.m11 {
+    background: url(../img/main/marnie021.jpg) no-repeat 50% / cover;
 }
 
 .txtWrap {
@@ -399,6 +431,10 @@ abbr {
     font-weight: 300;
 }
 
+.title img {
+    width: 270px;
+}
+
 .swiper-slide .subtitle {
     font-size: 21px;
 }
@@ -407,4 +443,73 @@ abbr {
     font-size: 14px;
     max-width: 400px;
     line-height: 1.3;
+}
+
+/******************************************* Cont2 *******************************************/
+.cont2 {
+    background-color: #716844;
+    color: #ede6cb;
+    position: relative;
+}
+
+.cont2 .info{
+    max-width: 1200px;
+    margin: auto;
+    padding: 70px;
+    display: flex;
+    flex-direction: column;
+    text-align: center;
+    border-bottom: 1px solid #3f3f3f;
+}
+
+.cont2 .info .tit1{
+    font-size: 30px;
+}
+
+.cont2 .info .tit1::after,
+.cont2 .info .tit1::before{
+    content: '';
+    display: inline-block;
+    width: 17px;
+    height: 15px;
+    background: url(../img/main/kurosuke.png) no-repeat 50% / 100%;
+    vertical-align: middle;
+}
+
+.cont2 .info .tit2{
+    font-size: 24px;
+}
+
+.cont2 .info .tit3{
+    font-size: 17px;
+}
+
+.cont2 .info>a{
+    display: block;
+    width: 250px;
+    margin: auto;
+    padding: 15px;
+    color: #ede6cb;
+    border: 1px solid #ede6cb;
+    transition: all .3s;
+    font-size: 17px;
+}
+
+.cont2 .info a:hover{
+    background-color: #fff;
+    color: #000;
+}
+
+.cont2 .ghiimg{
+    position: absolute;
+    right: 0;
+    top: 30%;
+    display: inline-block;
+    background-color: #fafafa;
+    padding: 30px 50px;
+}
+
+.cont2 .ghiimg img{
+    width: 210px;
+    height: 110px;
 }
