--- a/001.HTML/013.ghibli_PJ/css/common.css
+++ b/001.HTML/013.ghibli_PJ/css/common.css
@@ -269,8 +269,8 @@ img{
 }
 
 .gnb1>ul>li:hover>a {
-    color: #ffbb52;
-    background-color: #ffff91;
+    background-color: #bfbfbf42;
+    border: 2px solid snow;
 }
 
 .ghilogo {
@@ -285,8 +285,7 @@ img{
 }
 
 .smenu a:hover {
-    color: #0037b4;
-    background-color: #95b0e2e0;
+    background-color: #1a1a1a59;
 }
 
 .gnb1>ul>li:nth-child(1):hover .smenu {
@@ -518,6 +517,7 @@ img{
 
 .cont3 {
     background: url(../img/main/opabg.webp) no-repeat 0 50% / cover;
+    position: relative;
 }
 
 .cont3 .movie {
@@ -525,6 +525,47 @@ img{
     padding: 70px;
     margin: auto;
 }
+
+.cont3 .kuro {
+    position: absolute;
+    /* animation: kuro 5s ease-in-out infinite; */
+}
+
+.cont3 .kuro1 {
+    width: 250px;
+    top: 15%;
+    left: 5%;
+}
+
+.cont3 .kuro2 {
+    width: 200px;
+    top: 20%;
+    right: 5%;
+}
+
+.cont3 .kuro3 {
+    width: 50px;
+    top: 35%;
+    left: 5%;
+}
+
+.cont3 .kuro4 {
+    width: 70px;
+    top: 45%;
+    right: 6%;
+}
+
+.cont3 .kuro5 {
+    width: 40px;
+    top: 50%;
+    left: 12%;
+}
+
+/* @keyframes kuro {
+    0% {transform: translateY(0%)}
+    50% {transform: translateY(15%);}
+    100% {transform: translateY(0%);}
+} */
 
 .cont3 .movie .moviet {
     text-align: center;
@@ -629,6 +670,14 @@ img{
 
 .ostSwiper .swiper-slide:hover::after{
     opacity: .8;
+}
+
+.cont4 .totorun{
+    position: absolute;
+    right: 0;
+    bottom: 0;
+    width: 200px;
+    height: 100px;
 }
 
 /******************************************* footer sch *******************************************/
