--- a/001.HTML/013.ghibli_PJ/css/common.css
+++ b/001.HTML/013.ghibli_PJ/css/common.css
@@ -388,6 +388,14 @@ img{
     background-position: center;
 }
 
+/* .cont1 .parallax-bg img {
+    display: block;
+    width: 100%;
+    height: 100vh;
+    object-fit: cover;
+} */
+
+
 .parallax-bg.m1 {
     background: url(../img/main/chihiro.jpeg) no-repeat 50% / cover;
 }
@@ -532,13 +540,13 @@ img{
 }
 
 .cont3 .kuro1 {
-    width: 250px;
+    width: 120px;
     top: 15%;
     left: 5%;
 }
 
 .cont3 .kuro2 {
-    width: 200px;
+    width: 100px;
     top: 20%;
     right: 5%;
 }
@@ -576,6 +584,10 @@ img{
     padding: 30px;
     display: flex;
     justify-content: center;
+    flex-wrap: wrap;
+}
+.cont3 .movie .list.m {
+    display: none;
 }
 
 .cont3 .movie .list .poster{
