--- a/001.HTML/013.ghibli_PJ/css/mainmedia.css
+++ b/001.HTML/013.ghibli_PJ/css/mainmedia.css
@@ -96,6 +96,10 @@
         font-size: 28px;
     }
 
+    .cont2 .info .tit2 {
+        font-size: 20px;
+    }
+
     .cont2 .logoGold {
         padding: 0;
     }
