--- a/001.HTML/013.ghibli_PJ/css/ocean.css
+++ b/001.HTML/013.ghibli_PJ/css/ocean.css
@@ -572,7 +572,7 @@ section .inner {
 
 /******************************************* 하단 *******************************************/
 #footer {
-    padding: 10px 0 10px 0;
+    padding: 10px 0;
     background: #a3a3a3;
     font-size: 14px;
     color: #404040;
