--- a/001.HTML/013.ghibli_PJ/css/common.css
+++ b/001.HTML/013.ghibli_PJ/css/common.css
@@ -406,7 +406,7 @@ img{
 
 
 .parallax-bg.m1 {
-    background: url(../img/main/chihiro.jpeg) no-repeat 50% / cover;
+    background: url(../img/main/chihiro001.jpg) no-repeat 50% / cover;
 }
 
 .parallax-bg.m2 {
@@ -414,7 +414,7 @@ img{
 }
 
 .parallax-bg.m3 {
-    background: url(../img/main/mononoke008.jpg) no-repeat 50% / cover;
+    background: url(../img/main/mononoke019.jpg) no-repeat 50% / cover;
 }
 
 .parallax-bg.m4 {
@@ -426,7 +426,7 @@ img{
 }
 
 .parallax-bg.m6 {
-    background: url(../img/main/majo014.jpg) no-repeat 50% / cover;
+    background: url(../img/main/mbg6.jpg) no-repeat 50% / cover;
 }
 
 .parallax-bg.m7 {
