--- a/001.HTML/012.Blue_PJ/css/media.css
+++ b/001.HTML/012.Blue_PJ/css/media.css
@@ -100,6 +100,10 @@
         line-height: 90px;
     }
 
+    .imgCont {
+        display: none;
+    }
+
     .wrapBox .cont {
         max-width: 700px;
     }
