--- a/001.HTML/006.CGV_PJ/003.site/css/media.css
+++ b/001.HTML/006.CGV_PJ/003.site/css/media.css
@@ -31,6 +31,10 @@
         float: none;
     }
 
+    .gnb {
+        bottom: 22px;
+    }
+
     /* gnb에 마우스 오버시 .glist메뉴 보이기 */
     .gnb:hover .glist {
         display: block;
