--- a/001.HTML/012.Blue_PJ/css/intro.css
+++ b/001.HTML/012.Blue_PJ/css/intro.css
@@ -1,25 +1,5 @@
 @charset 'utf-8';
-@import url('https://fonts.googleapis.com/css2?family=Permanent+Marker&display=swap');
-
-*{box-sizing: border-box;}
-
-html,
-body,
-h1 {
-    margin: 0;
-    padding: 0;
-}
-
-body {
-    font-family: 'Permanent Marker', cursive;
-    letter-spacing: 2px;
-    white-space: nowrap;
-}
-
-a {
-    text-decoration: none;
-    color: snow;
-}
+@import url(reset.css);
 
 .wrap {
     position: relative;
@@ -31,7 +11,7 @@ a {
 
 .wrap .bg {
     position: relative;
-    background: url(../images/hifive1.webp) no-repeat 50% 50% / contain;
+    background: url(../images/hifive1.webp) no-repeat 50% 50% / cover;
     height: 100vh;
     filter: grayscale(1);
     z-index: 1;
@@ -42,7 +22,7 @@ a {
     width: 23vw;
     height: 40vh;
     top: 39%;
-    left: 10%;
+    left: 5%;
     padding-top: 30px;
     cursor: pointer;
     z-index: 2;
@@ -55,45 +35,51 @@ a {
 
 .wrap .tit a {
     font-size: 1.9vw;
-    animation: filter 2s infinite ease-in;
+    color: snow;
+    font-family: 'Permanent Marker', cursive;
 }
 
-@keyframes filter {
-    0%{filter: 0;}
-    50%{filter: invert(100%) sepia(100%) saturate(0%) hue-rotate(288deg) brightness(102%) contrast(102%);}
-    100%{filter: 0;}
-}
 /* 반응형 */
 @media (max-width: 768px) {
-    .wrap .tit{
-    width: 18vw;
-    height: 26vh;
-    top: 41%;
-    line-height: 26vh;
-    padding-top: 0;
+    .wrap .bg {
+        background-size: contain;
     }
-    .wrap .tit a{
+
+    .wrap .tit {
+        width: 18vw;
+        height: 26vh;
+        top: 41%;
+        left: 12%;
+        line-height: 26vh;
+        padding-top: 0;
+    }
+
+    .wrap .tit a {
         font-size: 1.5vh;
     }
 }
+
 @media (max-width: 425px) {
-    .wrap .tit{
+    .wrap .tit {
         height: 15vh;
         top: 45%;
         left: 13%;
         line-height: 15vh;
     }
+
     .wrap .tit a {
         letter-spacing: 0;
         font-size: 1vh;
     }
 }
+
 @media (max-width: 375px) {
-    .wrap .tit{
+    .wrap .tit {
         height: 10vh;
         top: 47%;
         line-height: 10vh;
     }
+
     .wrap .tit a {
         font-size: .9vh;
     }
