--- a/001.HTML/013.ghibli_PJ/css/common.css
+++ b/001.HTML/013.ghibli_PJ/css/common.css
@@ -1,77 +1,6 @@
 @charset "utf-8";
-/******************************************* 공통 *******************************************/
-@import url('https://fonts.googleapis.com/css2?family=Gowun+Batang&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=IM+Fell+English+SC&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Poor+Story&display=swap');
-
-/* font-family: 'Gowun Batang', serif; */
-/* font-family: 'IM Fell English SC', serif; */
-/* font-family: 'Poor Story', cursive; */
-html,
-body,
-h1,
-h2,
-ul,
-ol {
-    margin: 0;
-    padding: 0;
-    list-style: none;
-}
-
-html,
-body {
-    scroll-behavior: smooth;
-    font-family: 'IM Fell English SC', serif;
-}
-
-body {
-    color: #333333;
-    overflow-x: hidden;
-}
-
-a {
-    color: #000;
-    text-decoration: none;
-}
-
-p {
-    font-size: 100%;
-    line-height: 1.5em;
-}
-
-b,
-strong {
-    font-weight: bolder;
-}
-
-abbr {
-    text-decoration: underline solid;
-}
-
-img{
-    vertical-align:middle
-}
-
-.cont1 {
-    width: 100vw;
-    height: 100vh;
-}
-
-*,
-*::before,
-*::after {
-    box-sizing: border-box;
-}
-
-.afbf::after,
-.afbf::before{
-    content: '';
-    display: inline-block;
-    width: 17px;
-    height: 15px;
-    background: url(../img/main/kurosuke.png) no-repeat 50% / 100%;
-    vertical-align: middle;
-}
+@import url(reset.css);
+@import url(core.css);
 
 /******************************************* 상단 *******************************************/
 #top {
