--- a/001.HTML/013.ghibli_PJ/css/mainmedia.css
+++ b/001.HTML/013.ghibli_PJ/css/mainmedia.css
@@ -137,7 +137,9 @@
     }
 
     .logo {
-        left: 46%;
+        left: 50%;
+        top: 25%;
+        transform: translateX(-50%);
     }
 
     .cont .btn {
