--- a/001.HTML/006.CGV_PJ/003.site/css/main.css
+++ b/001.HTML/006.CGV_PJ/003.site/css/main.css
@@ -266,6 +266,7 @@ transition-delay: 0s;
     padding-top: 20px;
     padding-left: 20px;
 }
+
 #info img{
     float: left;
     margin-right: 20px;
@@ -280,20 +281,10 @@ transition-delay: 0s;
 .sns li{
     width: 34px;
     height: 34px;
-    background: url(../images/sprites_logo.png)no-repeat;
-    
+    background: #737373;
     margin: 2px;
-    filter: grayscale(100%);
-}
-
-.sns li:first-child {
-    background-position: -509px -429px;
-}
-.sns li:nth-child(2) {
-    background-position: -551px -429px;
-}
-.sns li:nth-child(3) {
-    background-position: -593px -429px;
+    border-radius: 7px;
+    transition: all .5s;
 }
 
 .sns a{
@@ -302,6 +293,17 @@ transition-delay: 0s;
     height: 100%;
 }
 
-.sns li:hover{
-    filter: grayscale(0%);
+#info .sns li a img {
+    width: 100%;
+    height: 100%;
+    margin: 0;
+    transition: all 1s;
+}
+
+.sns li:hover {
+    background: snow;
+}
+
+.sns li:hover img{
+    transform: rotateY(360deg);
 }
