--- a/001.HTML/000.T_Pj/3.Dune2_Pj/common.css
+++ b/001.HTML/000.T_Pj/3.Dune2_Pj/common.css
@@ -147,7 +147,6 @@ li{
 }
 .ci span img{
     width: 40%;
-    /* opacity: 60%; */
 }
 .ci span img{
     display: none;
@@ -159,7 +158,7 @@ li{
 .cd{
     height: 0px;
     overflow-y: scroll;
-    /* background: url(./img/ibg1.jpeg) no-repeat center/cover; */
+    background: url(./img/ibg1.jpeg) no-repeat 20% 10%/cover;
     transition: height .6s ease-out;
     border-radius: 20px 0 0 20px;
     margin-top: 15px;
@@ -177,6 +176,7 @@ li{
     padding: 10px;
     text-align: justify;
     font-family: EB Garamond;
+    color: #000;
 }
 /* -------------------------------main----------------------------------- */
 .info{
