--- a/001.HTML/000.T_Pj/3.Dune2_Pj/common.css
+++ b/001.HTML/000.T_Pj/3.Dune2_Pj/common.css
@@ -12,7 +12,7 @@ html,body{
 body{
     font-family: '맑은 고딕','돋음',arial,sans-serif;
     background-color: #000;
-    background: url(img/bg.jpg) no-repeat fixed center/cover;
+    background: url(img/bg2.jpg) no-repeat fixed center/cover;
 }
 .cont { 
     height: 100vh;
@@ -39,8 +39,8 @@ li{
 /* -------------------------------head----------------------------------- */
 .top{
     min-height: 111px;
-    background-color: #232112;
-    border-bottom: 1px solid #c9aa1f;
+    background-color: #190a07;
+    border-bottom: 1px solid #eb8400;
 }
 .logo{
     padding-top: 20px;
@@ -67,7 +67,7 @@ li{
     box-sizing: border-box;
 }
 .gnb>ul>li:hover>a{
-    border-bottom: 3px solid rgb(201, 170, 31);
+    border-bottom: 3px solid #eb8400;
 }
 .smenu{
     position: absolute;
@@ -92,7 +92,7 @@ li{
 }
 .gnb>ul>li:nth-child(2):hover::after,
 .gnb>ul>li:nth-child(4):hover::after{
-    border-bottom: 2px solid #c9aa1f;
+    border-bottom: 2px solid #eb8400;
 }
 .gnb>ul>li::after{
     content: '';
@@ -101,13 +101,40 @@ li{
     width: 100%;
     left: 0;
     height: 0;
-    background-color: #bf9a76;
+    background-color: #7c410a;
     transition: height .4s ease-out;
     margin-top: 1px;
 }
 /* -------------------------------main----------------------------------- */
-.cont1{
+/* -------------------------------sec1----------------------------------- */
+
+.cont .down {
+    font-style: normal;
+    position: absolute;
+    left: 50%;
+    bottom: 2%;
+    transform: translateX(-50%);
+    color: #fdfbae;
+    font-size: 32px;
+    cursor: pointer;
+    animation: down 1.7s linear infinite;
+}
+
+@keyframes down {
+    0%{transform: translateY(-10px);}
+    25%{transform: translateY(0px);}
+    50%{transform: translateY(10px);}
+    75%{transform: translateY(0px);}
+    100%{transform: translateY(-10px);}
+}
+
+.cont1 {
     height: calc(100vh - 111px);
+}
+
+/* -------------------------------sec2----------------------------------- */
+.cont2 {
+
 }
 #cbx {
     position: relative;
@@ -158,7 +185,7 @@ li{
 .cd{
     height: 0px;
     overflow-y: scroll;
-    background: url(./img/ibg1.jpeg) no-repeat 20% 10%/cover;
+    background: no-repeat 20% 10%/cover;
     transition: height .6s ease-out;
     border-radius: 20px 0 0 20px;
     margin-top: 15px;
@@ -176,7 +203,7 @@ li{
     padding: 10px;
     text-align: justify;
     font-family: EB Garamond;
-    color: #000;
+    color: snow;
 }
 /* -------------------------------main----------------------------------- */
 .info{
