--- a/001.HTML/014.moksha/css/common.css
+++ b/001.HTML/014.moksha/css/common.css
@@ -1,3 +1,26 @@
 @charset "utf-8";
 @import url(reset.css);
 @import url(core.css);
+
+#header {
+    height: 100px;
+    width: 100%;
+    position: fixed;
+    top: 0;
+    left: 0;
+    z-index: 99;
+}
+
+#header .nav-box {
+    width: 100%;
+    display: flex;
+    justify-content: space-between;
+    position: absolute;
+    left: 0;
+    top: 0;
+    padding: 34px 35px;
+}
+
+#header .logo.pc {
+    width: 34px;
+}
