--- a/001.HTML/014.moksha/css/common.css
+++ b/001.HTML/014.moksha/css/common.css
@@ -2,6 +2,7 @@
 @import url(reset.css);
 @import url(core.css);
 
+/* --------------------header-------------------- */
 #header {
     height: 100px;
     width: 100%;
