--- a/001.HTML/014.moksha/css/common.css
+++ b/001.HTML/014.moksha/css/common.css
@@ -83,3 +83,36 @@
     width: 100%;
     transition: opacity .4s;
 }
+
+/* --------------------sec1-------------------- */
+.top-wrapper .top-layer-wrapper {
+    height: 100vh;
+    width: 100%;
+    position: absolute;
+    top: 0;
+    left: 0;
+}
+
+.top-wrapper .top-layer-wrapper .address {
+    position: absolute;
+    left: 40px;
+    bottom: 30px;
+    font-size: 15px;
+    font-weight: 300;
+}
+
+.top-wrapper .first-section {
+    width: 100%;
+    height: 100%;
+    padding-top: 126px;
+    margin-bottom: 289px;
+}
+
+.top-wrapper .inner-wrapper {
+    width: 100%;
+    height: 100%;
+    position: relative;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
