--- a/001.HTML/014.moksha/css/core.css
+++ b/001.HTML/014.moksha/css/core.css
@@ -1,3 +1,4 @@
 @charset "utf-8";
 @import url('https://fonts.googleapis.com/css2?family=Piazzolla:ital,opsz,wght@0,8..30,100..900;1,8..30,100..900&display=swap');
 * {box-sizing: border-box;}
+.top-wrapper {width: 100%; height: 100%; position: relative;}
