--- a/001.HTML/014.moksha/css/common.css
+++ b/001.HTML/014.moksha/css/common.css
@@ -116,3 +116,32 @@
     justify-content: center;
     align-items: center;
 }
+
+.top-wrapper .first-section .first-view-box {
+    position: relative;
+    width: 610px;
+    aspect-ratio: 610 / 970;
+}
+
+.top-wrapper .first-section .first-view-box .swiper-wrapper {
+    overflow: hidden;
+}
+
+/* swiper */
+/* .swiper {
+    width: 100%;
+    height: 100%;
+  }
+
+  .swiper-slide {
+    background-position: center;
+    background-size: cover;
+  }
+
+  .swiper-slide img {
+    display: block;
+    width: 100%;
+  } */
+.top-wrapper .first-section .swiper-fade .swiper-slide {
+    transition: opacity 5s ease-in-out; /* 페이드 지속 시간을 1초로 설정 */
+}
