--- a/001.HTML/014.moksha/css/core.css
+++ b/001.HTML/014.moksha/css/core.css
@@ -1,4 +1,5 @@
 @charset "utf-8";
 @import url('https://fonts.googleapis.com/css2?family=Piazzolla:ital,opsz,wght@0,8..30,100..900;1,8..30,100..900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Cormorant+Garamond:ital,wght@0,300;0,400;0,500;0,600;0,700;1,300;1,400;1,500;1,600;1,700&display=swap');
 * {box-sizing: border-box;}
 .top-wrapper {width: 100%; height: 100%; position: relative;}
