--- a/001.HTML/014.moksha/css/common.css
+++ b/001.HTML/014.moksha/css/common.css
@@ -47,6 +47,18 @@
     justify-content: center;
 }
 
+#header .menu-box .counsel {
+    margin-right: 30px;
+    font-family: "Nanum Myeongjo", serif;
+    font-size: 15px;
+    font-weight: 400;
+    transition: .4s;
+}
+
+#header .menu-box .counsel:hover {
+    opacity: .6;
+}
+
 #header .btn-menu {
     display: block;
     width: 61px;
@@ -99,6 +111,7 @@
     bottom: 30px;
     font-size: 15px;
     font-weight: 300;
+    font-family: "Cormorant Garamond", serif;
 }
 
 .top-wrapper .first-section {
@@ -127,21 +140,38 @@
     overflow: hidden;
 }
 
-/* swiper */
-/* .swiper {
-    width: 100%;
-    height: 100%;
-  }
-
-  .swiper-slide {
-    background-position: center;
-    background-size: cover;
-  }
-
-  .swiper-slide img {
-    display: block;
-    width: 100%;
-  } */
 .top-wrapper .first-section .swiper-fade .swiper-slide {
-    transition: opacity 5s ease-in-out; /* 페이드 지속 시간을 1초로 설정 */
+    transition: opacity 1s ease-in-out;
+}
+
+/* --------------------sec2-------------------- */
+.second-section {
+    margin: 0 auto 289px;
+    max-width: 900px;
+}
+
+.top-wrapper .second-section .description-box {
+    font-family: "Nanum Myeongjo", serif;
+    display: flex;
+    align-items: flex-start;
+    padding: 0 65px 79px;
+}
+
+.top-wrapper .second-section .description-box .title {
+    font-size: 28px;
+    margin-right: 50px;
+    writing-mode: vertical-lr;
+}
+
+.top-wrapper .second-section .description-box .text-box {
+    display: flex;
+    justify-content: center;
+    align-items: start;
+}
+
+.top-wrapper .second-section .description-box .text-box .text {
+    font-size: 14px;
+    letter-spacing: 1px;
+    margin-right: 5px;
+    writing-mode: vertical-lr;
 }
