--- a/001.HTML/014.moksha/css/core.css
+++ b/001.HTML/014.moksha/css/core.css
@@ -4,3 +4,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Nanum+Myeongjo&display=swap');
 * {box-sizing: border-box;}
 .top-wrapper {width: 100%; height: 100%; position: relative;}
+.link-button {width: 157px; height: 157px; display: flex; justify-content: center; align-items: center; font-family: "Nanum Myeongjo", serif; border: 1px solid #000000b3; border-radius: 50%; transition: .4s;}
+.link-button:hover {scale: 1.05;}
+.link-button .text {font-size: 14px; transition: .4s;}
